# molly

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  debug.bat  ffile.txt  setup.bat  sfile.txt  ufile.txt
.github/workflows/: build.yml
assets/: funny_string.asset  tmp_file.asset
src/: asset_registry.cc  asset_registry.h  camera.cc  camera.h  config.h  context.cc  context.h  glfw_platform.cc  glfw_platform.h  glfw_utils.cc  glfw_utils.h  handle.h  light.h  main.cc  material.h  mesh.cc  mesh.h  model.h  molly.cc  molly.h  molly_math.h  molly_services.h  platform_services.h  rdtmath.h  rendertoy.cc  rendertoy.h  rendertoy_services.h  scene.h  shader.cc  shader.h  textfile.cc  textfile.h  texture.cc  texture.h  types.h  utils.cc  utils.h
src/shaders/: fno_mat.glsl  fphong.glsl  fsample.glsl  fsource.glsl  vno_mat.glsl  vphong.glsl  vsample.glsl  vsource.vsh
tests/: test_asset_registry.cc  test_sample.cc  test_textfile.cc  test_utils.h
